조회수 aws 설정 중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,13 @@ spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/hwhdb
 spring.datasource.username=root
 spring.datasource.password=a12a12
 
+#none: ???? ?? (???? DB?? ????)
+#update: ??? ???? ??
+#validate: ??? ???? ??? ???? ??? ??? Application? ??
+#create: ??? ? ???? DROP ?? ???? ?? ??
+#create-drop: ??? ???? ?? drop
 
-
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.default_batch_fetch_size = 100
 spring.jpa.properties.hibernate.show-sql=true
