레이드 카드 뷰

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.profiles.active=local
 
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/hwhdb
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/testdb
 spring.datasource.username=root
 spring.datasource.password=a12a12
 
@@ -11,11 +11,12 @@ spring.datasource.password=a12a12
 #validate: ??? ???? ??? ???? ??? ??? Application? ??
 #create: ??? ? ???? DROP ?? ???? ?? ??
 #create-drop: ??? ???? ?? drop
-
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.default_batch_fetch_size = 100
 spring.jpa.properties.hibernate.show-sql=true
+
 
 logging.level.org.hibernate.sql=debug
 
