--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'org.springframework.boot' version '2.7.4'
     id 'io.spring.dependency-management' version '1.0.14.RELEASE'
+    id "com.github.node-gradle.node" version "3.1.0"
     id 'java'
 }
 
@@ -16,6 +17,7 @@ configurations {
 
 repositories {
     mavenCentral()
+    gradlePluginPortal()
 }
 
 dependencies {
@@ -26,6 +28,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'com.github.node-gradle:gradle-node-plugin:3.1.0'
     implementation 'org.modelmapper:modelmapper:2.3.0'
     implementation 'org.jetbrains:annotations:20.1.0'
 
@@ -56,3 +59,14 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+node {
+    version = '16.17.0' //자신이 사용하는 노드 버전
+    download = true
+    nodeModulesDir = file("${projectDir}/src/main/resources/static")
+
+}
+task copyFrontLib(type: Copy) {
+    from "${projectDir}/src/main/resources/static"
+    into "${projectDir}/build/resources/main/static/."
+}
+copyFrontLib.dependsOn npmInstall
