--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.profiles.active=local
-
+server.port = 8088
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/testdb
@@ -19,7 +18,6 @@ spring.jpa.properties.hibernate.show-sql=true
 
 
 logging.level.org.hibernate.sql=debug
-
 
 
 
