--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ repositories {
     gradlePluginPortal()
 }
 
+bootJar{
+    archiveVersion = "0.0.2"
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
