레이드 다른 게임 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.default_batch_fetch_size = 100
 spring.jpa.properties.hibernate.show-sql=true
-
+spring.jpa.show-sql=true 
 
 logging.level.org.hibernate.sql=debug
 
